[package]
name = "matrix-dapnet-bot"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "3.1", features = ["derive", "env"] }
dapnet-api = "0.2.0"
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
matrix-sdk = { version = "0.5.0", default-features = false, features = ["e2e-encryption", "markdown", "native-tls"] }
serde = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
